Update publish-packages.yml for Azure Pipelines

--- a/publish-packages.yml
+++ b/publish-packages.yml
@@ -4,8 +4,7 @@ trigger:
   - release/*  
     
 pool:
-  name: Azure Pipelines
-  demands: npm
+  vmImage: 'ubuntu-latest'
 
 variables: 
   - group: PackageFeedAccessToken
