Update publish-packages.yml for Azure Pipelines

--- a/publish-packages.yml
+++ b/publish-packages.yml
@@ -30,10 +30,10 @@ steps:
 
 # Set version number.
 - task: Npm@1
-  displayName: 'npm version fiftyone.devicedetection'
+  displayName: 'npm version fiftyone.geolocation'
   inputs:
     command: custom
-    workingDir: fiftyone.devicedetection
+    workingDir: fiftyone.geolocation
     verbose: true
     customCommand: version $(GitVersion.SemVer)    
   continueOnError: true
