--- a/build-and-test.yml
+++ b/build-and-test.yml
@@ -1,24 +1,86 @@
 trigger: none
 
+pr:
+  - master
+  - develop
+  - release/*  
+
 pool:
   vmImage: 'ubuntu-latest'
   
 strategy:
   matrix:
+    node_6_x:
+      node_version: 6.x
     node_8_x:
       node_version: 8.x
     node_10_x:
       node_version: 10.x
+    node_12_x:
+      node_version: 12.x
       
 steps:
+- checkout: self
+  lfs: true
+  submodules: recursive
+
 - task: NodeTool@0
   inputs:
     versionSpec: $(node_version)
   displayName: 'Install Node.js'
 
 - script: |
-    npm install jest
-    npm install jest-junit
+    content='{ 
+      "name": "geolocation-node-tests", 
+      "version": "1.0.0", 
+      "description": "Temporary package to allow all tests to run using the local code as dependencies", 
+      "main": "index.js", 
+      "scripts": { 
+        "test": "jest --ci --reporters=jest-junit --reporters=default --coverage --coverageReporters=cobertura" 
+        }, 
+      "repository": { 
+        "type": "git", "url": "https://github.com/51Degrees/pipeline-node" 
+        }, 
+      "author": "51Degrees",
+      "dependencies": { 
+        "jest": "^24.9.0",
+        "jest-junit": "^9.0.0",
+        "fiftyone.pipeline.core": "^4.1.0-beta",
+        "fiftyone.pipeline.engines": "^4.1.0-beta",
+        "fiftyone.pipeline.engines.fiftyone": "^4.1.0-beta",
+        "fiftyone.pipeline.javascriptbundler": "^4.1.0-beta",
+        "fiftyone.pipeline.cloudrequestengine": "^4.1.0-beta"
+        },
+      "jest-junit": {
+          "outputName": "'"$NODE_VERSION"'.xml"    
+        },
+      "jest": {
+          "globals": {
+            "resourceKey": "AQS5HKcyQX4Dop_U10g"
+          }
+        }
+      }'
+    echo $content
+    echo $content > package.json
+  displayName: 'Create package.json for tests'
+
+# The secure file to download will be stored in the 
+# Pipelines/Library/SecureFiles section in Azure DevOps.
+- task: DownloadSecureFile@1
+  displayName: 'Download .npmrc'
+  name: npmrc
+  inputs:
+    secureFile: '.npmrc'
+
+- task: CopyFiles@2
+  displayName: 'Copy .npmrc to working directory'
+  inputs:
+    sourceFolder: '$(Agent.TempDirectory)'
+    targetFolder: '$(System.DefaultWorkingDirectory)'
+    contents: '.npmrc'
+
+- script: |
+    npm install
     npm test
   displayName: 'Build and Test'
 
