--- a/publish-packages.yml
+++ b/publish-packages.yml
@@ -34,7 +34,8 @@ steps:
   inputs:
     command: 'custom'
     workingDir: '$(System.DefaultWorkingDirectory)'
-    customCommand: 'version $(GitVersion.SemVer)'
+    verbose: true
+    customCommand: 'version --no-git-tag-version $(GitVersion.SemVer)'
   continueOnError: true
   condition: succeededOrFailed()
 
