CLEANUP: Remove usage of cloud staging site in example. REF: Update to use version 4.1.0 of core dependencies

--- a/build-and-test.yml
+++ b/build-and-test.yml
@@ -45,11 +45,10 @@ steps:
       "dependencies": { 
         "jest": "^24.9.0",
         "jest-junit": "^9.0.0",
-        "fiftyone.pipeline.core": "^4.1.0-beta",
-        "fiftyone.pipeline.engines": "^4.1.0-beta",
-        "fiftyone.pipeline.engines.fiftyone": "^4.1.0-beta",
-        "fiftyone.pipeline.javascriptbundler": "^4.1.0-beta",
-        "fiftyone.pipeline.cloudrequestengine": "^4.1.0-beta"
+        "fiftyone.pipeline.core": "^4.1.0",
+        "fiftyone.pipeline.engines": "^4.1.0",
+        "fiftyone.pipeline.engines.fiftyone": "^4.1.0",
+        "fiftyone.pipeline.cloudrequestengine": "^4.1.0"
         },
       "jest-junit": {
           "outputName": "'"$NODE_VERSION"'.xml"    
