--- a/build-and-test.yml
+++ b/build-and-test.yml
@@ -94,7 +94,7 @@ steps:
   displayName: 'Build and Test'
 
 - script: |
-    eslint = '{
+    eslint='{
         "env": {
             "browser": true,
             "commonjs": true,
@@ -114,18 +114,21 @@ steps:
             "ecmaVersion": 2018
         },
         "rules": {
-            "new-cap": "off",
-            "node/no-deprecated-api": "off",
-            "no-throw-literal": "off",
-            "no-path-concat": "off",
-            "no-prototype-builtins": "off",
-            "no-eval": "off"
+          "node/no-deprecated-api": "off",
+          "no-throw-literal": "off",
+          "no-path-concat": "off",
+          "no-prototype-builtins": "off",
+          "no-eval": "off",
+          "semi": [
+              2,
+              "always"
+          ]
         }
       }'
-      echo $eslint
-      echo $eslint > .eslintrc
-      npm install -g eslint
-      eslint **/*.js
+    echo $eslint
+    echo $eslint > .eslintrc
+    npm install -g eslint
+    eslint **/*.js
   displayName: "Set up and run eslint"
   condition: ne(variables['node_version'], '6.x')
 
