--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "Joseph Dix <joseph@51degrees.com> (https://51degrees.com)"
   ],
   "dependencies": {
-    "fiftyone.pipeline.cloudrequestengine": "file:../fiftyone.pipeline.cloudrequestengine",
-    "fiftyone.pipeline.core": "file:../fiftyone.pipeline.core",
-    "fiftyone.pipeline.engines": "file:../fiftyone.pipeline.engines",
-    "fiftyone.pipeline.engines.fiftyone": "file:../fiftyone.pipeline.engines.fiftyone"
+    "fiftyone.pipeline.cloudrequestengine": "^4.1.0",
+    "fiftyone.pipeline.core": "^4.1.0",
+    "fiftyone.pipeline.engines": "^4.1.0",
+    "fiftyone.pipeline.engines.fiftyone": "^4.1.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
@@ -32,6 +32,6 @@
   },
   "license": "EUPL-1.2",
   "bugs": {
-    "url": "https://github.com/51Degrees/geolocation-node/issues"
+    "url": "https://github.com/51Degrees/location-node/issues"
   }
 }
