--- a/build-and-test.yml
+++ b/build-and-test.yml
@@ -107,7 +107,8 @@ steps:
             "SharedArrayBuffer": "readonly",
             "test": true,
             "jest": true,
-            "expect": true
+            "expect": true,
+            "resourceKey": true
         },
         "parserOptions": {
             "ecmaVersion": 2018
