--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "fiftyone.pipeline.cloudrequestengine": "^4.1.0",
     "fiftyone.pipeline.core": "^4.1.0",
     "fiftyone.pipeline.engines": "^4.1.0",
-    "fiftyone.pipeline.engines.fiftyone": "^4.1.0"
+    "fiftyone.pipeline.engines.fiftyone": "^4.1.0",
+    "fiftyone.devicedetection": "^4.1.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
