--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "fiftyone.pipeline.cloudrequestengine": "^4.1.0",
     "fiftyone.pipeline.core": "^4.1.0",
     "fiftyone.pipeline.engines": "^4.1.0",
-    "fiftyone.pipeline.engines.fiftyone": "^4.1.0",
-    "fiftyone.devicedetection": "^4.1.0"
+    "fiftyone.pipeline.engines.fiftyone": "^4.1.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
@@ -34,7 +33,7 @@
   "license": "EUPL-1.2",
   "bugs": {
     "url": "https://github.com/51Degrees/location-node/issues"
-  },      
+  },
   "jest": {
     "globals": {
       "resourceKey": "!!YOUR_RESOURCE_KEY!!"
