--- a/build-and-test.yml
+++ b/build-and-test.yml
@@ -127,7 +127,7 @@ steps:
       }'
     echo $eslint
     echo $eslint > .eslintrc
-    npm install -g eslint
+    npm install -g eslint@6.8.0
     eslint **/*.js
   displayName: "Set up and run eslint"
   condition: ne(variables['node_version'], '6.x')
