TEST: Added the examples to the examples.test.js. Updated the build script to install fiftyone.devicedetection module for testing combining services example.

--- a/build-and-test.yml
+++ b/build-and-test.yml
@@ -55,6 +55,7 @@ steps:
     echo "Resource key for testing = $(LocationResourceKey)"
     export RESOURCE_KEY="$(LocationResourceKey)"
     npm install
+    npm install fiftyone.devicedetection
     npm test
   displayName: 'Build and Test'
 
