--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "Joseph Dix <joseph@51degrees.com> (https://51degrees.com)"
   ],
   "dependencies": {
-    "fiftyone.pipeline.cloudrequestengine": "^4.3.0-error-messages-v4-2.2",
-    "fiftyone.pipeline.core": "^4.3.0-error-messages-v4-2.2",
-    "fiftyone.pipeline.engines": "^4.3.0-error-messages-v4-2.2",
-    "fiftyone.pipeline.engines.fiftyone": "^4.3.0-error-messages-v4-2.2"
+    "fiftyone.pipeline.cloudrequestengine": "^4.2.0-beta",
+    "fiftyone.pipeline.core": "^4.2.0-beta",
+    "fiftyone.pipeline.engines": "^4.2.0-beta",
+    "fiftyone.pipeline.engines.fiftyone": "^4.2.0-beta"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
