--- a/build-and-test.yml
+++ b/build-and-test.yml
@@ -17,7 +17,9 @@ strategy:
       node_version: 10.x
     node_12_x:
       node_version: 12.x
-      
+    node_14_x:
+      node_version: 14.x
+
 steps:
 - checkout: self
   lfs: true
