--- a/build-and-test.yml
+++ b/build-and-test.yml
@@ -6,7 +6,7 @@ pr:
   - release/*  
 
 pool:
-  vmImage: 'ubuntu-latest'
+  vmImage: 'ubuntu-18.04'
 
 variables:
   - group: InternalKeys
@@ -19,6 +19,7 @@ strategy:
       node_version: 12.x
     node_14_x:
       node_version: 14.x
+  maxParallel: 1
 
 steps:
 - checkout: self
