--- a/publish-packages.yml
+++ b/publish-packages.yml
@@ -4,7 +4,7 @@ trigger:
   - release/*  
     
 pool:
-  vmImage: 'ubuntu-latest'
+  vmImage: 'ubuntu-18.04'
 
 variables: 
   - group: PackageFeedAccessToken
