--- a/ci/shared-build-and-test-stage.yml
+++ b/ci/shared-build-and-test-stage.yml
@@ -28,6 +28,8 @@ stages:
           node_version: 12.x
         node_14_x:
           node_version: 14.x
+        node_16_x:
+          node_version: 16.x
       maxParallel: 1
     
     steps:
