REF: Update jest version
- REF: Update jest version
- WIP: Use pipeline dev packages
- TEST: Fix tests, use jasmine test runner, increase timeout and re-configure jest-expect-message.

--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "Joseph Dix <joseph@51degrees.com> (https://51degrees.com)"
   ],
   "dependencies": {
-    "fiftyone.pipeline.cloudrequestengine": "^4.3.2",
-    "fiftyone.pipeline.core": "^4.3.2",
-    "fiftyone.pipeline.engines": "^4.3.2",
-    "fiftyone.pipeline.engines.fiftyone": "^4.3.2"
+    "fiftyone.pipeline.cloudrequestengine": "4.3.5-beta.2",
+    "fiftyone.pipeline.core": "4.3.5-beta.2",
+    "fiftyone.pipeline.engines": "4.3.5-beta.2",
+    "fiftyone.pipeline.engines.fiftyone": "4.3.5-beta.2"
   },
   "devDependencies": {
     "@types/node": "^15.12.2",
@@ -30,7 +30,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "jest": "^24.9.0",
+    "jest": "^27.0.6",
     "jest-expect-message": "^1.0.2",
     "jest-junit": "^9.0.0"
   },
@@ -41,8 +41,12 @@
   "jest-junit": {
     "outputName": "test_results.xml"
   },
-  "jest": {    
-    "setupTestFrameworkScriptFile": "jest-expect-message",
+  "jest": {
+    "testRunner": "jest-jasmine2",
+    "setupFilesAfterEnv": [
+      "./setup.js",
+      "jest-expect-message"
+    ],
     "globals": {
       "resourceKey": "!!YOUR_RESOURCE_KEY!!"
     }
