--- a/package.json
+++ b/package.json
@@ -10,12 +10,7 @@
   "scripts": {
     "test": "jest --ci --reporters=jest-junit --reporters=default --coverage --coverageReporters=cobertura"
   },
-  "contributors": [
-    "Filip Hnízdo <filip@octophin.com> (https://octophindigital.com/)",
-    "Steve Ballantine <stephen@51degrees.com> (https://51degrees.com)",
-    "Ben Shilito <ben@51degrees.com> (https://51degrees.com)",
-    "Joseph Dix <joseph@51degrees.com> (https://51degrees.com)"
-  ],
+  "author": "51Degrees Engineering <engineering@51degrees.com>",
   "dependencies": {
     "fiftyone.pipeline.cloudrequestengine": "4.4.x",
     "fiftyone.pipeline.core": "4.4.x",
