--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "jest --ci --reporters=jest-junit --reporters=default --coverage --coverageReporters=cobertura"
+    "test": "jest --ci --reporters=jest-junit --reporters=default --coverage --coverageReporters=cobertura",
+    "lint": "eslint . --ext .js"
   },
   "author": "51Degrees Engineering <engineering@51degrees.com>",
   "dependencies": {
@@ -20,7 +21,7 @@
   },
   "devDependencies": {
     "@types/node": "^15.14.9",
-    "eslint": "^6.8.0",
+    "eslint": "8.57.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-node": "^11.1.0",
