--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
   "devDependencies": {
     "@types/node": "^15.14.9",
     "eslint": "8.57.0",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.28.1",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsdoc": "^38.1.6",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.3.1",
-    "eslint-plugin-standard": "^4.1.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-jest": "^23.13.2",
+    "eslint-plugin-n": "^15.0.0",
     "jest": "^27.5.1",
     "jest-expect-message": "^1.1.3",
     "jest-junit": "^9.0.0"
